# target-jsonl

./: .gitignore  README.md  pyproject.toml  setup.cfg  setup.py  target_jsonl.py
.github/workflows/: release.yml
